nutype_test_suite/tests/ui/number/validate/min_vs_max.stderr
error: `min` cannot be greater than `max`.
       Sometimes we all need a little break.
 --> tests/ui/number/validate/min_vs_max.rs:3:19
  |
3 | #[nutype(validate(max = 0, min = 20))]
  |                   ^^^^^^^^^^^^
